--- a/Forms.html
+++ b/Forms.html
@@ -18,35 +18,35 @@
     <meta name="description" content="" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/img/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="img/favicon.png" />
 
     <!-- Fonts -->
 
-    <link rel="stylesheet" href="/fonts/fonts.css"/>
+    <link rel="stylesheet" href="fonts/fonts.css"/>
 
     <!-- Icons -->
-    <link rel="stylesheet" href=" /fonts/boxicons.css" />
-    <link rel="stylesheet" href="/fonts/fontawesome.css" />
-    <link rel="stylesheet" href="/fonts/flag-icons.css" />
+    <link rel="stylesheet" href=" fonts/boxicons.css" />
+    <link rel="stylesheet" href="fonts/fontawesome.css" />
+    <link rel="stylesheet" href="fonts/flag-icons.css" />
 
     <!-- Core CSS -->
-    <link rel="stylesheet" href="/css/core.css" class="template-customizer-core-css" />
+    <link rel="stylesheet" href="css/core.css" class="template-customizer-core-css" />
     <!-- <link rel="stylesheet" href="/css/theme-default.css" class="template-customizer-theme-css" /> -->
-    <link rel="stylesheet" href="/css/demo.css" />
+    <link rel="stylesheet" href="css/demo.css" />
 
     <!-- Vendors CSS -->
-    <link rel="stylesheet" href="/libs/perfect-scrollbar/perfect-scrollbar.css" />
+    <link rel="stylesheet" href="libs/perfect-scrollbar/perfect-scrollbar.css" />
 
     <!-- Page CSS -->
 
     <!-- Helpers -->
-    <script src="/js/helpers.js"></script>
+    <script src="js/helpers.js"></script>
 
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Template customizer: To hide customizer set displayCustomizer value false in config.js.  -->
-    <script src="/js/template-customizer.js"></script>
+    <script src="js/template-customizer.js"></script>
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
-    <script src="/js/config.js"></script>
+    <script src="js/config.js"></script>
   </head>
 
 <body>
@@ -56,7 +56,7 @@
         <div class="app-brand demo" style="height: 64px;">
           <a href="index.html" class="app-brand-link d-flex align-items-center ">
             <span class="app-brand-logo demo d-flex">
-              <img src="/img/logo.png" alt="sixpack logo" style="width: 35px; object-fit: contain;">
+              <img src="img/logo.png" alt="sixpack logo" style="width: 35px; object-fit: contain;">
             </span>
             <span class="app-brand-text demo menu-text fw-bold ms-2">Sixpack</span>
           </a>
@@ -290,31 +290,31 @@
 
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
-    <script src="/libs/jquery/jquery.js"></script>
-    <script src="/libs/popper/popper.js"></script>
-    <script src="/js/bootstrap.js"></script>
-    <script src="/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
-    <script src="/js/menu.js"></script>
+    <script src="libs/jquery/jquery.js"></script>
+    <script src="libs/popper/popper.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+    <script src="js/menu.js"></script>
     <!-- endbuild -->
 
     <!-- Vendors JS -->
 
-    <script src="/libs/select2/select2.js"></script>
-    <script src="/libs/bootstrap-select/bootstrap-select.js"></script>
-    <script src="/libs/moment/moment.js"></script>
-    <script src="/libs/flatpickr/flatpickr.js"></script>
-    <script src="/libs/tagify/tagify.js"></script>
-    <script src="/libs/formvalidation/dist/js/FormValidation.min.js"></script>
-    <script src="/libs/formvalidation/dist/js/plugins/Bootstrap5.min.js"></script>
-    <script src="/libs/formvalidation/dist/js/plugins/AutoFocus.min.js"></script>
+    <script src="libs/select2/select2.js"></script>
+    <script src="libs/bootstrap-select/bootstrap-select.js"></script>
+    <script src="libs/moment/moment.js"></script>
+    <script src="libs/flatpickr/flatpickr.js"></script>
+    <script src="libs/tagify/tagify.js"></script>
+    <script src="libs/formvalidation/dist/js/FormValidation.min.js"></script>
+    <script src="libs/formvalidation/dist/js/plugins/Bootstrap5.min.js"></script>
+    <script src="libs/formvalidation/dist/js/plugins/AutoFocus.min.js"></script>
 
     <!-- Main JS -->
 
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
 
     <!-- Page JS -->
 
-    <script src="/js/form-validation.js"></script>
+    <script src="js/form-validation.js"></script>
 
 </body>
 
