--- a/Home.html
+++ b/Home.html
@@ -18,37 +18,37 @@
     <meta name="description" content="" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/img/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="img/favicon.png" />
 
     <!-- Fonts -->
     
-    <link rel="stylesheet" href="/fonts/fonts.css"/>
+    <link rel="stylesheet" href="fonts/fonts.css"/>
 
     <!-- Icons -->
-    <link rel="stylesheet" href=" /fonts/boxicons.css" />
-    <link rel="stylesheet" href="/fonts/fontawesome.css" />
-    <link rel="stylesheet" href="/fonts/flag-icons.css" />
+    <link rel="stylesheet" href=" fonts/boxicons.css" />
+    <link rel="stylesheet" href="fonts/fontawesome.css" />
+    <link rel="stylesheet" href="fonts/flag-icons.css" />
 
     <!-- Core CSS -->
-    <link rel="stylesheet" href="/css/core.css" class="template-customizer-core-css" />
+    <link rel="stylesheet" href="css/core.css" class="template-customizer-core-css" />
     <!-- <link rel="stylesheet" href="/css/theme-default.css" class="template-customizer-theme-css" /> -->
-    <link rel="stylesheet" href="/css/demo.css" />
+    <link rel="stylesheet" href="css/demo.css" />
 
     <!-- Vendors CSS -->
-    <link rel="stylesheet" href="/libs/perfect-scrollbar/perfect-scrollbar.css" />
-    <link rel="stylesheet" href="/libs/typeahead-js/typeahead.css" />
-    <link rel="stylesheet" href="/libs/apex-charts/apex-charts.css" />
+    <link rel="stylesheet" href="libs/perfect-scrollbar/perfect-scrollbar.css" />
+    <link rel="stylesheet" href="libs/typeahead-js/typeahead.css" />
+    <link rel="stylesheet" href="libs/apex-charts/apex-charts.css" />
 
     <!-- Page CSS -->
 
     <!-- Helpers -->
-    <script src="/js/helpers.js"></script>
+    <script src="js/helpers.js"></script>
 
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Template customizer: To hide customizer set displayCustomizer value false in config.js.  -->
-    <script src="/js/template-customizer.js"></script>
+    <script src="js/template-customizer.js"></script>
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
-    <script src="/js/config.js"></script>
+    <script src="js/config.js"></script>
   </head>
 
 <body>
