--- a/Login.html
+++ b/Login.html
@@ -18,21 +18,21 @@
     <meta name="description" content="" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/img/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="img/favicon.png" />
 
     <!-- Fonts -->
 
-    <link rel="stylesheet" href="/fonts/fonts.css"/>
+    <link rel="stylesheet" href="fonts/fonts.css"/>
 
     <!-- Icons -->
-    <link rel="stylesheet" href=" /fonts/boxicons.css" />
-    <link rel="stylesheet" href="/fonts/fontawesome.css" />
-    <link rel="stylesheet" href="/fonts/flag-icons.css" />
+    <link rel="stylesheet" href=" fonts/boxicons.css" />
+    <link rel="stylesheet" href="fonts/fontawesome.css" />
+    <link rel="stylesheet" href="fonts/flag-icons.css" />
 
     <!-- Core CSS -->
-    <link rel="stylesheet" href="/css/core.css" class="template-customizer-core-css" />
+    <link rel="stylesheet" href="css/core.css" class="template-customizer-core-css" />
     <!-- <link rel="stylesheet" href="/css/theme-default.css" class="template-customizer-theme-css" /> -->
-    <link rel="stylesheet" href="/css/demo.css" />
+    <link rel="stylesheet" href="css/demo.css" />
 
 
 
@@ -41,13 +41,13 @@
     <!-- Page CSS -->
 
     <!-- Helpers -->
-    <script src="/js/helpers.js"></script>
+    <script src="js/helpers.js"></script>
 
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Template customizer: To hide customizer set displayCustomizer value false in config.js.  -->
-    <script src="/js/template-customizer.js"></script>
+    <script src="js/template-customizer.js"></script>
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
-    <script src="/js/config.js"></script>
+    <script src="js/config.js"></script>
 
 
     <style>
@@ -210,17 +210,17 @@
 
      <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
-    <script src="/libs/jquery/jquery.js"></script>
-    <script src="/libs/popper/popper.js"></script>
-    <script src="/js/bootstrap.js"></script>
-    <script src="/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
-    <script src="/js/menu.js"></script>
+    <script src="libs/jquery/jquery.js"></script>
+    <script src="libs/popper/popper.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+    <script src="js/menu.js"></script>
     <!-- endbuild -->
 
     <!-- Vendors JS -->
 
     <!-- Main JS -->
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
 
     <!-- Page JS -->
 
