--- a/Index.html
+++ b/Index.html
@@ -68,13 +68,13 @@
         <div class="menu-divider mt-0"></div>
         <div class="menu-inner-shadow"></div>
         <ul class="menu-inner py-1">
-          <li class="menu-item">
+          <li class="menu-item open">
             <a href="javascript:void(0);" class="menu-link menu-toggle">
               <i class="menu-icon tf-icons bx bx-home-circle"></i>
               <div data-i18n="Dashboards">Dashboards</div>
             </a>
             <ul class="menu-sub">
-              <li class="menu-item">
+              <li class="menu-item active">
                 <a href="index.html" class="menu-link">
                   <div data-i18n="Analytics">Analytics</div>
                 </a>
