add datatable & select2 -modify nav menu

--- a/Index.html
+++ b/Index.html
@@ -245,6 +245,23 @@
               </a>
             </div>
 
+            <div class="navbar-nav-right d-flex align-items-center">
+              <div class="row breadcrumbs-top">
+                  <div class="col-12">
+                      <div class="breadcrumb-wrapper col-12">
+                          <ol class="breadcrumb p-0 mb-0">
+                              <li class="breadcrumb-item"><a href="index.html"><i class="bx bx-home-alt"></i></a>
+                              </li>
+                              <li class="breadcrumb-item"><a href="#">Extensions</a>
+                              </li>
+                              <li class="breadcrumb-item active">Block-UI
+                              </li>
+                          </ol>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
             <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
 
               <ul class="navbar-nav flex-row align-items-center ms-auto">
