--- a/Forms.html
+++ b/Forms.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="css/core.css" class="template-customizer-core-css" />
     <!-- <link rel="stylesheet" href="/css/theme-default.css" class="template-customizer-theme-css" /> -->
     <link rel="stylesheet" href="css/demo.css" />
-
+    <link rel="stylesheet" href="css/select2.css" />
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="libs/perfect-scrollbar/perfect-scrollbar.css" />
 
@@ -295,6 +295,7 @@
     <script src="js/bootstrap.js"></script>
     <script src="libs/perfect-scrollbar/perfect-scrollbar.js"></script>
     <script src="js/menu.js"></script>
+    <script src="js/select2.js"></script>
     <!-- endbuild -->
 
     <!-- Vendors JS -->
