--- a/Home.html
+++ b/Home.html
@@ -896,7 +896,12 @@
                 </div>
             </div>
 
-            <div class="col-md-6 mb-3"></div>
+            <div class="col-md-6 mb-3">
+                <div class="col-md-6 col-12 mb-4">
+                    <label for="flatpickr-date" class="form-label">Date Picker</label>
+                    <input type="text" class="form-control" placeholder="YYYY-MM-DD" id="flatpickr-date" />
+                </div>
+            </div>
 
             <div class="col-md-6 mb-3"></div>
 
