--- a/Home.html
+++ b/Home.html
@@ -34,7 +34,6 @@
 
     <link rel="stylesheet" href="css/pages/home.css"/>
 
-
     <script src="js/helpers.js"></script>
     <script src="js/template-customizer.js"></script>
     <script src="js/config.js"></script>
@@ -442,9 +441,9 @@
 
                 <div class="form-group input-file-cont mb-4 d-flex rounded-2">
                     <div class="custom-file d-flex flex-grow-1">
-                        <input type="file" class="custom-file-input" id="custom-file-input1">
+                        <input type="file" class="custom-file-input" id="custom-file-">
                         <label class="custom-file-label cursor-pointer"
-                               for="custom-file-input1">Choose file
+                               for="custom-file-">Choose file
                             <span class="d-flex browse-text">Browse</span>
                         </label>
                     </div>
@@ -923,7 +922,8 @@
 <script src="js/datatable.js"></script>
 <script src="libs/select2/select2.js"></script>
 <script src="js/form-select2.js"></script>
-
+<script src="js/forms-pickers.js"></script>
+<script src="js/forms-editors.js"></script>
 
 <script src="js/main.js"></script>
 </body>
