--- a/editor.html
+++ b/editor.html
@@ -301,11 +301,10 @@
                         <h5 class="card-header">Full Editor</h5>
                         <div class="card-body">
                             <div id="full-editor">
-                                <h6>Quill Rich Text Editor</h6>
-                                <p>
-                                    Cupcake ipsum dolor sit amet. Halvah cheesecake chocolate bar gummi bears cupcake. Pie
-                                    macaroon bear claw. Soufflé I love candy canes I love cotton candy I love.
-                                </p>
+              
+                            </div>
+                            <div class="col-12 text-center mt-5">
+                                <button type="submit" class="btn rounded-pill btn-label-success px-5">Save</button>
                             </div>
                         </div>
                     </div>
@@ -327,14 +326,8 @@
 <script src="js/menu.js"></script>
 <!-- endbuild -->
 
-<!-- Vendors JS -->
-<script src="libs/quill/katex.js"></script>
 <script src="libs/quill/quill.js"></script>
-<!-- Main JS -->
 <script src="js/main.js"></script>
-
-<!-- Page JS -->
-
 <script src="js/forms-editors.js"></script>
 
 </body>
