feat: add form select script

--- a/Home.html
+++ b/Home.html
@@ -21,18 +21,19 @@
 
     <link rel="stylesheet" href="fonts/fonts.css"/>
 
-    <link rel="stylesheet" href=" fonts/boxicons.css"/>
+    <link rel="stylesheet" href="fonts/boxicons.css"/>
     <link rel="stylesheet" href="fonts/fontawesome.css"/>
     <link rel="stylesheet" href="fonts/flag-icons.css"/>
-    <link rel="stylesheet" href="css/core.css"
+    <link rel="stylesheet" href="css/rtl/core.css"
           class="template-customizer-core-css"/>
-    <link rel="stylesheet" href="css/demo.css"/>
+    <!-- <link rel="stylesheet" href="css/demo.css"/> -->
     <link rel="stylesheet" href="css/datatables.min.css"/>
     <link rel="stylesheet"
           href="libs/perfect-scrollbar/perfect-scrollbar.css"/>
     <link rel="stylesheet" href="libs/select2/select2.css"/>
 
     <link rel="stylesheet" href="css/pages/home.css"/>
+    <link rel="stylesheet" href="css/rtl/rtl.css">
 
     <script src="js/helpers.js"></script>
     <script src="js/template-customizer.js"></script>
