--- a/Index.html
+++ b/Index.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="css/core.css" class="template-customizer-core-css" />
     <!-- <link rel="stylesheet" href="/css/theme-default.css" class="template-customizer-theme-css" /> -->
     <link rel="stylesheet" href="css/demo.css" />
+        <link rel="stylesheet" href="css/rtl/rtl.css">
 
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="libs/perfect-scrollbar/perfect-scrollbar.css" />
@@ -58,7 +59,7 @@
             <span class="app-brand-logo demo d-flex">
               <img src="img/logo.png" alt="sixpack logo" style="width: 35px; object-fit: contain;">
             </span>
-            <span class="app-brand-text demo menu-text fw-bold ms-2">Sixpack</span>
+            <span class="app-brand-text demo menu-text fw-bold ms-2">سیکس پک</span>
           </a>
           <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto">
             <i class="bx menu-toggle-icon d-none d-xl-block fs-4 align-middle"></i>
@@ -71,17 +72,17 @@
           <li class="menu-item open">
             <a href="javascript:void(0);" class="menu-link menu-toggle">
               <i class="menu-icon tf-icons bx bx-home-circle"></i>
-              <div data-i18n="Dashboards">Dashboards</div>
+              <div data-i18n="Dashboards">داشبورد</div>
             </a>
             <ul class="menu-sub">
               <li class="menu-item active">
                 <a href="index.html" class="menu-link">
-                  <div data-i18n="Analytics">Analytics</div>
+                  <div data-i18n="Analytics">آنالیتیک</div>
                 </a>
               </li>
               <li class="menu-item">
                 <a href="dashboards-ecommerce.html" class="menu-link">
-                  <div data-i18n="eCommerce">eCommerce</div>
+                  <div data-i18n="eCommerce">تجارت الکترونیک</div>
                 </a>
               </li>
             </ul>
@@ -252,9 +253,9 @@
                           <ol class="breadcrumb p-0 mb-0">
                               <li class="breadcrumb-item"><a href="index.html"><i class="bx bx-home-alt"></i></a>
                               </li>
-                              <li class="breadcrumb-item"><a href="#">Extensions</a>
+                              <li class="breadcrumb-item"><a href="#">اسد</a>
                               </li>
-                              <li class="breadcrumb-item active">Block-UI
+                              <li class="breadcrumb-item active">حمه رحیم
                               </li>
                           </ol>
                       </div>
